refactor(Food): melhorados endpoints e atualizar dados